import org.gradle.api.tasks.bundling.Jar

/* (c) https://github.com/MontiCore/monticore */
plugins {
  id "java"
  id "de.monticore.generator" version "$mc_version"
  id "maven-publish"
  id "com.gradleup.shadow" version "$shadow_plugin_version"
  id 'org.ec4j.editorconfig' version "0.0.3"
}

group = "de.monticore.lang"
description = "Sequence Diagram DSL"

java {
  withSourcesJar()
  withJavadocJar()
  toolchain {
    languageVersion = JavaLanguageVersion.of(21)
  }
}

dependencies {
  implementation "de.se_rwth.commons:se-commons-logging:$commons_version"
  implementation "de.se_rwth.commons:se-commons-utilities:$commons_version"
  //implementation "com.google.guava:guava:23.0"

  implementation "org.antlr:antlr4-runtime:4.12.0"
  implementation "de.monticore:monticore-runtime:$mc_version"
  implementation "de.monticore:monticore-grammar:$mc_version"
  implementation ("de.monticore:monticore-grammar:$mc_version") {capabilities {
    requireCapability("$group:monticore-grammar-grammars") }
  }

  implementation "de.monticore.lang:cd4analysis:$mc_version"

  grammar ("de.monticore:monticore-grammar:$mc_version")
  grammar ("de.monticore.lang:ocl:$mc_version")
  implementation "de.monticore.lang:ocl:$mc_version"
  implementation "commons-cli:commons-cli:$commons_cli_version"

  // libraries for sd diff
  implementation("de.se_rwth:automata-library:1.4-SNAPSHOT") {
    exclude group: "com.google.guava", module: "guava"
  }

  testImplementation "org.junit.jupiter:junit-jupiter-api:$junit_version"
  testImplementation "org.junit.jupiter:junit-jupiter-params:$junit_version"
  testImplementation "org.junit.jupiter:junit-jupiter-engine:$junit_version"
  testRuntimeOnly "org.junit.platform:junit-platform-launcher:$junit_version"
}

repositories {
  if(("true").equals(getProperty('useLocalRepo'))){
    mavenLocal()
  }
  maven {
    credentials.username = mavenUser
    credentials.password = mavenPassword
    url = repo
  }
}

test {
  useJUnitPlatform()
  testLogging {
    exceptionFormat = 'full'
    showStackTraces = true
    showStandardStreams = true
  }

  // listen to standard out and standard error of the test JVM(s)
  addTestOutputListener(new TestOutputListener() {
    @Override
    void onOutput(TestDescriptor testDescriptor, TestOutputEvent outputEvent) {
      logger.lifecycle("Test: " + testDescriptor.getName() + " produced standard out/err: " + outputEvent.getMessage())
    }
  })
}

tasks.withType(JavaCompile).configureEach {
  options.encoding = "UTF-8"
}


// generated java doc contains errors, disable for now
javadoc.failOnError = false

shadowJar {
  archiveFileName = 'MCSD4Development.jar'
  archiveClassifier = "mc-tool"
  manifest {
    attributes('Main-Class': 'de.monticore.lang.sd4development.SD4DevelopmentTool')
  }
}

jar.dependsOn(shadowJar)

tasks.register('testReport', TestReport) {
  destinationDirectory = layout.buildDirectory.dir("reports/allTests")
  // Include the results from the 'test' task
  reportOn tasks.withType(Test)
}

// configure deployment
publishing {
  // configure what artifacts to publish
  publications {
    mavenJava(MavenPublication) {
      artifactId = "$project.name"
      from components.java
    }
  }
  repositories.maven {
    credentials.username = mavenUser
    credentials.password = mavenPassword
    def releasesRepoUrl = "https://nexus.se.rwth-aachen.de/content/repositories/monticore-releases/"
    def snapshotsRepoUrl = "https://nexus.se.rwth-aachen.de/content/repositories/monticore-snapshots/"
    url = version.endsWith("SNAPSHOT") ? snapshotsRepoUrl : releasesRepoUrl
  }
}
